# prelude-django-admin-toolkit

./: .gitignore  Jenkinsfile  Pipfile  README.md  README.rst  docker-compose.yml  gulpfile.js  manage.py  manual.md  package-lock.json  package.json  pyproject.toml  setup.py  sonar-project.properties
demo_project/: settings.py
frontend/django_templates/admin/: actions.html  app_index.html  base.html  base_site.html  change_form.html  change_list.html  change_list_object_tools.html  change_list_orig.html  change_list_results.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  pagination.html  submit_line.html
frontend/django_templates/admin/includes/: app_header.html  available_apps_index.html  fieldset.html  index_customized.html  nav_user_actions.html  nav_user_available_apps.html
frontend/django_templates/admin/pages/: about.html
frontend/js/: admin_changelist.js  admin_helpers.js  app.js
frontend/scss/: base_site.scss  base_theme.scss  site.scss  site_default.scss  site_yellow.scss
pdat/: asgi.py  settings.py  urls.py  wsgi.py
prelude_django_admin_toolkit/: admin.py  apps.py  context_processors.py  customizer.py  forms.py
prelude_django_admin_toolkit/templatetags/: prelude_utils.py  uikit_admin.py
prelude_django_admin_uikit/: admin.py
prelude_django_admin_uikit/static/prelude_uikit_admin/: site.scss
prelude_django_admin_uikit/templates/admin/: base.html  base_site.html  login.html
testproject/: Makefile  Procfile  pyproject.toml  pytest.ini
testproject/demoapp/: admin.py  models.py
testproject/demoapp/management/commands/: seed_data.py
testproject/demoapp/migrations/: 0001_initial.py  0002_item_time_capsule.py  0003_auto_20201013_0338.py  0004_extraitems.py  0005_quilleditor.py  0006_auto_20210428_1323.py  0007_auto_20210428_1557.py
testproject/features/: base.feature  environment.py
testproject/features/steps/: auth.py  page_home.py
testproject/testproject/: prelude_admin.py  settings.py  urls.py
testproject/tests/: test_admin.py  test_customizer.py
(+1 files in other folders)
