[tool.poetry]
name = "prelude-django-admin-toolkit"
version = "0.1.3"
description = "An alternative Django Admin theme with Batteries; project Bruh"
authors = ["Jonhnatha Trigueiro <joepreludian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
